<resources>
    <string name="app_name">LocationTodo</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved!</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the LocationTodo app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Reminder Location!</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use this app</string>
    <string name="foreground_location_permissions_denied_explanation">You need to grant location permission in order to add a location to this reminder.</string>
    <string name="notification_permissions_denied_explanation">You need to grant notification permission in system settings in order to add this reminder.</string>
    <string name="background_location_permission_denied_explanation">Your request for location permission was denied. Please enable "Allow all the time" in Settings.</string>
    <string name="background_and_notification_permissions_denied_explanation">You need to grant background location and notification permissions in order to add a location to this reminder.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">LocationTodo</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="geofences_not_removed">Problem in removing geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="save_location">SAVE LOCATION</string>

    <string name="map_id">e28bc8ea898ab67c</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="geofence_added">Location Reminder Geofence added</string>
    <string name="geofences_removed">Geofences removed.</string>
    <string name="geofence_transition_invalid_type">Invalid geofence transition type</string>
    <string name="unknown_geofence_error">Unknown geofence error</string>
    <string name="channel_description">Location Reminder geofence notification channel</string>
</resources>
